--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@t3-oss/env-core": "^0.10.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
