--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@t3-oss/env-core": "^0.10.1",
-    "husky": "^9.0.11",
+    "axios": "^1.7.7",
     "lint-staged": "^15.2.7",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^9.1.5",
     "prettier": "^3.2.4",
     "typescript": "^5"
   }
